Add people section

--- a/packages/stateofjs/lib/surveys/yml/css2021outline.yml
+++ b/packages/stateofjs/lib/surveys/yml/css2021outline.yml
@@ -483,9 +483,48 @@ outline:
 
     ### RESOURCES ###
 
-  - id: resources
+  - id: resources # new for 2021
     slug: resources
     questions:
+      - id: people
+        template: multiple
+        options:
+          - id: david_walsh
+          - id: ishadeed
+          - id: sara_soueidan
+          - id: lea_verou
+          - id: josh_comeau
+          - id: chris_coyier
+          - id: christian_heilmann
+          - id: adrian_roselli
+          - id: andy_bell
+          - id: bruce_lawson
+          - id: eric_meyer
+          - id: heydon_pickering
+          - id: jen_simmons
+          - id: peter_paul_koch
+          - id: una_kravets
+          - id: rachel_andrew
+          - id: chen_hui_jing
+          - id: brad_frost
+          - id: ethan_marcotte
+          - id: kitty_giraudel
+          - id: stephanie_walter
+          - id: stephanie_eckles
+          - id: hidde_de_vries
+          - id: adam_argyle
+          - id: ana_tudor
+          - id: kilian_valkhof
+          - id: eric_bailey
+          - id: max_bock
+          - id: miriam_suzanne
+          - id: bramus_van_damme
+
+      - id: blogs_news_magazines
+        template: others
+        matchTags: [people]
+
+
       - id: blogs_news_magazines
         template: multiple
         options:
@@ -494,15 +533,18 @@ outline:
           - id: smashing_magazine
           - id: codrops
           - id: sitepoint
-          - id: david_walsh
           - id: devto
           - id: sidebar
           - id: heydesigner
           - id: css_weekly
           - id: frontend_horse
+          - id: frontend_focus
+          - id: css_irl
+          - id: moderncss
 
       - id: blogs_news_magazines
         template: others
+        matchTags: [courses, people, youtube, sites, newsletters, socialmedia]
 
       - id: sites_courses
         template: multiple
@@ -514,25 +556,45 @@ outline:
           - id: codecademy
           - id: levelup
           - id: wesbos
+          - id: frontendmasters
           - id: pluralsight
           - id: designcode
+          - id: udemy
+          - id: egghead
+          - id: newline
 
       - id: sites_courses
         template: others
+        matchTags: [courses, people, youtube, sites, newsletters, socialmedia]
 
       - id: podcasts
         template: multiple
         options:
           - id: shop_talk_show
-          - id: style_guide_podcast
           - id: big_web_show
           - id: changelog
           - id: syntaxfm
-          - id: css_podcast
+          - id: full_stack_radio
+          - id: front_end_happy_hour
+          - id: jamstack_radio
+          - id: web_platform_podcast
+          - id: modern_web
+          - id: codepen_radio
+          - id: ladybug
+          - id: software_engineering_daily
+          - id: frontend_weekend
+          - id: web_standards_ru
           - id: frontend_first
+          - id: http_203
+          - id: a11y_rules
+          - id: tools_day
+          - id: the_bike_shed
+          - id: css_podcast
+          - id: undefined_podcast
 
       - id: podcasts
         template: others
+        matchTags: [podcasts, people, sites]
 
     ### OPINIONS ###
 
@@ -646,7 +708,6 @@ outline:
           - id: south_asian
           - id: white_european
 
-
       - id: github_username
         template: text
         
@@ -665,19 +726,10 @@ outline:
           - id: entertainment
           - id: government
           - id: consulting
-          - id: travel
-          - id: insurance
-          - id: logistics
-          - id: energy
-          - id: telecommunications
-          - id: student
-          - id: hospitality
-          - id: cyber_security
-          - id: construction
-          - id: automotive
-          - id: agriculture
-          - id: transport
-          - id: manufacturing
+          
+      - id: industry_sector
+        template: others
+        matchTags: [industry_sectors]
 
       - id: country
         template: country
