--- a/packages/stateofjs/lib/surveys/yml/css2021outline.yml
+++ b/packages/stateofjs/lib/surveys/yml/css2021outline.yml
@@ -57,6 +57,7 @@ outline:
       - id: filter_effects
       - id: backdrop_filter
       - id: color_gamut
+      - id: perspective
 
       # 2021
       - id: intrinsic_sizing #min-, max, and fit-content
@@ -65,6 +66,8 @@ outline:
       - id: conic_gradient
         year: 2021
       - id: color_function
+        year: 2021
+      - id: accent_color
         year: 2021
 
   - id: interactions
@@ -76,14 +79,14 @@ outline:
       - id: overflow_anchor
       - id: touch_action
       - id: pointer_events
+      - id: scroll_timeline
 
   - id: typography
     template: feature
     slug: features
     questions:
-      - id: web_fonts
-      - id: variable_fonts
-      - id: line_breaking
+      # - id: web_fonts
+      # - id: line_breaking
       - id: font_variant
       - id: initial_letter
       - id: font_variant_numeric
@@ -93,16 +96,19 @@ outline:
       # - id: direction
 
       # 2021
+      - id: variable_fonts
+        year: 2021
+
       # - id: text_decoration_style
 
-  - id: animations_transforms
-    template: feature
-    slug: features
-    questions:
-      - id: transitions
-      - id: transforms
-      - id: animations
-      - id: perspective
+  # - id: animations_transforms
+  #   template: feature
+  #   slug: features
+  #   questions:
+  #     - id: transitions
+  #     - id: transforms
+  #     - id: animations
+  #     - id: perspective
 
   - id: accessibility
     template: feature
@@ -114,9 +120,13 @@ outline:
       # 2021
       - id: prefers_reduced_data
         year: 2021
+      - id: color_contrast
+        year: 2021
+      - id: color_scheme
+        year: 2021
       - id: tabindex
         year: 2021
-      - id: color_contrast
+      - id: aria_attributes
         year: 2021
       # - prefers-reduced-transparency # not supported yet
       # - prefers-contrast # not supported yet
@@ -137,6 +147,7 @@ outline:
 
       # 2021
       # - id: scroll_margin_scroll_padding
+
       - id: at_property #(@property)
         year: 2021
       - id: marker
@@ -337,25 +348,25 @@ outline:
         template: happiness
         sectionSlug: happiness
 
-  - id: css_methodologies
-    template: tool
-    slug: tools
-    questions:
-      - id: bem
-      - id: atomic_css
-      - id: oocss
-      - id: smacss
-      - id: it_css
-      - id: cube_css
-      - id: css_methodologies
-        intlId: tools.other_tools
-        template: text
-        sectionSlug: tools_others
-        suffix: others
-      - id: css_methodologies
-        intlId: tools.happiness
-        template: happiness
-        sectionSlug: happiness
+  # - id: css_methodologies
+  #   template: tool
+  #   slug: tools
+  #   questions:
+  #     - id: bem
+  #     - id: atomic_css
+  #     - id: oocss
+  #     - id: smacss
+  #     - id: it_css
+  #     - id: cube_css
+  #     - id: css_methodologies
+  #       intlId: tools.other_tools
+  #       template: text
+  #       sectionSlug: tools_others
+  #       suffix: others
+  #     - id: css_methodologies
+  #       intlId: tools.happiness
+  #       template: happiness
+  #       sectionSlug: happiness
 
   - id: css_in_js
     template: tool
@@ -377,7 +388,10 @@ outline:
         year: 2021
       - id: theme_ui
         year: 2021
-      # - id: goober # too early?
+      - id: vanilla_extract
+        year: 2021
+      - id: goober 
+        year: 2021
 
       # removed in 2021
       # - id: radium
@@ -513,7 +527,7 @@ outline:
           - id: prefers_reduced_motion
           - id: alt_text
           - id: semantic_markup
-          - id: aria_roles
+          - id: aria_attributes
 
       - id: accessibility_features
         template: others
@@ -685,7 +699,7 @@ outline:
         template: brackets
         options:
           - id: browser_interoperability
-          - id: animations
+          - id: interactions
           - id: architecture
           - id: layout_positioning
           - id: scoping_specificity
@@ -706,7 +720,7 @@ outline:
           - id: container_queries
           - id: parent_selector
           - id: nesting
-          - id: functions
+          # - id: functions
           - id: browser_support
           - id: mixins
           - id: scoping
@@ -730,6 +744,19 @@ outline:
   - id: user_info
     slug: user_info
     questions:
+
+      - id: age
+        template: single
+        options:
+          - id: range_less_than_10
+          - id: range_10_18
+          - id: range_18_24
+          - id: range_25_34
+          - id: range_35_44
+          - id: range_45_54
+          - id: range_55_64
+          - id: range_more_than_65
+
       - id: years_of_experience
         template: single
         options:
@@ -800,7 +827,7 @@ outline:
         template: multiple
         allowother: true
         options:
-          - id: biracial
+          # - id: biracial
           - id: black_african
           - id: east_asian
           - id: hispanic_latin
