--- a/packages/stateofjs/lib/surveys/yml/css2021outline.yml
+++ b/packages/stateofjs/lib/surveys/yml/css2021outline.yml
@@ -645,6 +645,7 @@ outline:
           - id: udemy
           - id: egghead
           - id: newline
+          - id: web_dev
 
       - id: sites_courses
         template: others
