--- a/packages/stateofjs/lib/surveys/yml/css2021outline.yml
+++ b/packages/stateofjs/lib/surveys/yml/css2021outline.yml
@@ -152,6 +152,8 @@ outline:
         year: 2021
       - id: marker
         year: 2021
+      - id: at_layer
+        year: 2021
       # - id: resize
 
   # - id: units_selectors
