--- a/packages/stateofjs/lib/surveys/yml/css2021outline.yml
+++ b/packages/stateofjs/lib/surveys/yml/css2021outline.yml
@@ -21,6 +21,15 @@ bgColor: '#232840'
 textColor: '#9ac6c9'
 linkColor: '#f649a7'
 hoverColor: '#59df7f'
+credits:
+  - id: sarah_fossheim
+    role: accessibility
+  - id: una_kravets
+    role: survey_design
+  - id: adam_argyle
+    role: survey_design
+  - id: philip_jagenstedt
+    role: survey_design
 outline:
   - id: layout
     template: feature
