Add bracket for missing features too

--- a/packages/stateofjs/lib/surveys/yml/css2021outline.yml
+++ b/packages/stateofjs/lib/surveys/yml/css2021outline.yml
@@ -482,7 +482,7 @@ outline:
       # e.g. [[0,5,5], [3,6,3], [1,7,1], [2,4,2], [5,3,5], [1,2,1], [5,1,1]]
       - id: tool_evaluation
         year: 2021
-        template: brackets
+        template: bracket
         options:
           - id: learning_curve_documentation # is a tool is easy to learn?
           - id: momentum_popularity # does it have a lot of hype?
@@ -726,7 +726,7 @@ outline:
 
       - id: css_pain_points
         year: 2021
-        template: brackets
+        template: bracket
         options:
           - id: browser_interoperability
           - id: interactions
@@ -745,12 +745,15 @@ outline:
       - id: currently_missing_from_css
         year: 2021
         sectionSlug: opinions_other
-        template: multiple
+        # template: multiple
+        optionsIntlId: features
+        template: bracket
         options: 
           - id: container_queries
           - id: parent_selector
           - id: nesting
-          # - id: functions
+          - id: color_functions
+          - id: subgrid
           - id: browser_support
           - id: mixins
           - id: scoping
