--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
     "qs": "^6.10.1",
     "react": "^17.0.2",
     "react-addons-pure-render-mixin": "^15.6.3",
-    "react-bootstrap": "1.6.1",
+    "react-bootstrap": "2.0.0-rc.0",
     "react-bootstrap-typeahead": "^5.2.0",
     "react-confetti": "^6.0.1",
     "react-cookie": "^4.1.1",
