--- a/packages/stateofjs/lib/surveys/yml/css2021outline.yml
+++ b/packages/stateofjs/lib/surveys/yml/css2021outline.yml
@@ -823,18 +823,18 @@ outline:
           - id: range_100_200
           - id: range_more_than_200
 
-      - id: job_title
-        template: single
-        allowother: true
-        options:
-          - id: cto
-          - id: front_end_developer
-          - id: full_stack_developer
-          - id: back_end_developer
-          - id: web_developer
-          - id: web_designer
-          - id: ui_designer
-          - id: ux_designer
+      # - id: job_title
+      #   template: single
+      #   allowother: true
+      #   options:
+      #     - id: cto
+      #     - id: front_end_developer
+      #     - id: full_stack_developer
+      #     - id: back_end_developer
+      #     - id: web_developer
+      #     - id: web_designer
+      #     - id: ui_designer
+      #     - id: ux_designer
 
       # too subjective?
       # - id: css_proficiency
